Correcting grid margin on mobile

--- a/frontend/src/styles/cardsgrid.css
+++ b/frontend/src/styles/cardsgrid.css
@@ -21,10 +21,20 @@
   /*background-color: grey;*/
   margin: var(--gutter-width) var(--gutter-width) 0 0;
   color: #fff;
-  /*border: 1px solid #fff;*/
+  /* border: 1px solid #fff; */
   height: 240px;
-
 }
+
+
+
+@media only screen and (max-width: 476px)
+  {
+    .grid-element {
+      margin-right: 0;
+    }
+}
+
+
  
 
 /* typo */
